--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "grunt-contrib-imagemin": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-spritesmith": "^6.3.0"
   }
 }
