--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-spritesmith": "^6.3.0"
+    "grunt-spritesmith": "^6.3.0",
+    "grunt-usemin": "^3.1.1"
   }
 }
